# openstack-tempest-skiplist

./: README.rst  requirements.txt  setup.cfg  setup.py  tempest_skip.yml  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst  overview.rst
doc/source/addtest/: addtest.rst  index.rst
doc/source/install/: index.rst  installation.rst
doc/source/listallowed/: index.rst  listallowed.rst
doc/source/listyaml/: index.rst  listyaml.rst
doc/source/validate/: index.rst  validate.rst
doc/source/yaml/: formatting.rst  index.rst
openstack-operators/: tempest_allow.yml  tempest_skip.yml
releasenotes/source/: conf.py  index.rst
roles/validate-tempest/vars/: tempest_skip.yml
