[metadata]
name = openstack-tempest-skiplist
summary = Tool and repository to store tempest skip list for different installers
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://pypi.org/project/openstack-tempest-skiplist
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    tempest_skip

[entry_points]
console_scripts =
    tempest-skip = tempest_skip.main:main
tempest_skip.cm =
    validate = tempest_skip.validate:Validate

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source