[metadata]
name = openstack-tempest-skiplist
summary = Tool and repository to store tempest skip list for different installers
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://pypi.org/project/openstack-tempest-skiplist
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    tempest_skip
data_files =
    usr/local/share/ansible/roles/install_skiplist = roles/install_skiplist/*
    usr/local/share/ansible/roles/validate_yaml = roles/validate_yaml/*

[entry_points]
console_scripts =
    tempest-skip = tempest_skip.main:main
tempest_skip.cm =
    validate = tempest_skip.validate:Validate
