[metadata]
name = openstack-tempest-skiplist
summary = Tool and repository to store tempest skip list for different installers
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://pypi.org/project/openstack-tempest-skiplist
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    tempest_skip
data_files =
    usr/local/share/ansible/roles/install_skiplist = roles/install_skiplist/*
    usr/local/share/ansible/roles/validate_yaml = roles/validate_yaml/*
    usr/local/share/ansible/roles/list_skipped = roles/list_skipped/*
    usr/local/share/ansible/roles/list_allowed = roles/list_allowed*
    usr/local/share/ansible/roles/validate-tempest = roles/validate-tempest/*
    usr/local/share/openstack-operator = openstack-operator/*

[entry_points]
console_scripts =
    tempest-skip = tempest_skip.main:main
tempest_skip.cm =
    validate = tempest_skip.validate:Validate
    list = tempest_skip.list_yaml:ListSkippedYaml
    list-skipped = tempest_skip.list_yaml:ListSkippedYaml
    addtest = tempest_skip.add_test:AddTest
    list-allowed = tempest_skip.list_allowed:ListAllowedYaml

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
